# 4WIS-Robot-Simulation-Environment

./: Readme.md
4WIS_Robot/: CMakeLists.txt  package.xml
4WIS_Robot/config/: four_wheel_steering_controller.yaml  robot.rviz
4WIS_Robot/include/: pointcloud_to_laserscan_nodelet.h
4WIS_Robot/launch/: run.launch  wo_world.launch
4WIS_Robot/meshes/: base_link.STL  stl.mlp
4WIS_Robot/scripts/: collision_pub.py  pointcloud_filter.py  world_tf.py
4WIS_Robot/src/: pointcloud_to_laserscan_node.cpp  pointcloud_to_laserscan_nodelet.cpp
4WIS_Robot/urdf/: 4wis_robot.sdf  4wis_robot.urdf  car_4ws_4wd.urdf.xacro
4WIS_Robot/urdf/sensors/: camera_mount.xacro  camera_sensor_gazebo.xacro  imu_mount.xacro  imu_sensor_gazebo.xacro  lidar_gpu_ray.xacro  lidar_mount.xacro
BARN_Env/: CMakeLists.txt  package.xml
BARN_Env/launch/: run.launch
BARN_Env/scripts/: joy_controller.py  map_info.py  map_tf.py  map_transfer.py
BARN_Env/source/world_files/: world_0.world  world_1.world  world_10.world  world_100.world  world_101.world  world_102.world  world_103.world  world_104.world  world_105.world  world_106.world  world_107.world  world_108.world  world_109.world  world_11.world  world_110.world  world_111.world  world_112.world  world_113.world  world_114.world  world_115.world  world_116.world  world_117.world  world_118.world  world_119.world  world_12.world  world_120.world  world_121.world  world_122.world  world_123.world  world_124.world  world_125.world  world_126.world  world_127.world  world_128.world  world_129.world  world_13.world  world_130.world  world_131.world  (+262 more)
(+3 files in other folders)
