<package format="2">
  <name>4WIS_Robot</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for car_4ws_4wd</p>
    <p>This package contains configuration data, 3D models and launch files for car_4ws_4wd robot</p>
  </description>
  <author>Runjiao Bao</author>
  <maintainer email="3120230765@bit.edu.cn" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>laser_geometry</depend>
  <depend>message_filters</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <export>
    <architecture_independent />
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>